--- a/frontend/src/pages/profile/page.module.css
+++ b/frontend/src/pages/profile/page.module.css
@@ -1,7 +1,19 @@
-
+.pageContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    padding: 1em;
+}
 
 .orderContainer {
     background-color: #004643;
     color: #faf0ca;
     padding: 0.5em;
+    border-radius: 0.5em;
+}
+
+.ordersContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0.5em;
 }
