--- a/frontend/src/pages/home/page.module.css
+++ b/frontend/src/pages/home/page.module.css
@@ -26,7 +26,7 @@
 
 .socialButtonsContainer{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 0.2em;
 }
 
@@ -43,6 +43,10 @@
 @media screen and (max-width: 1000px) {
     .foodSection {
         display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .socialButtonsContainer{
         grid-template-columns: repeat(2, 1fr);
     }
 }
