--- a/frontend/src/components/navbar/navbar.module.css
+++ b/frontend/src/components/navbar/navbar.module.css
@@ -2,10 +2,12 @@
     display: flex;
     align-items: center;
     height: 96px;
+    background-color: #FFFF;
+    border-bottom: 1px solid #EEEEEE;
 }
 
 .logo {
-    width: 5em;
+    width: 8em;
 }
 
 .navbarItems {
@@ -18,7 +20,23 @@
 }
 
 .navbarLink {
-    color: #faf0ca;
+    color: #323232;
+    font-size: .9em;
+    text-decoration: none;
+}
+
+.navbarLinkProfile {
+    display: flex;
+    align-items: center;
+    gap: .5em;
+    color: #076e4c;
+    font-size: .9em;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+.navbarLinkProfile .navbarLink {
+    color: #076e4c;
 }
 
 .navbarLinksContainer {
@@ -26,7 +44,7 @@
     justify-content: center;
     align-items: center;
     gap: 1em;
-    padding: 0.5em
+    padding: 0.5em;
 }
 
 .mobileNavbarItems {
